--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@fortawesome/fontawesome-free": "^6.2.0",
         "@popperjs/core": "^2.10.2",
         "axios": "^0.27",
         "bootstrap": "^5.1.3",
@@ -13,8 +14,5 @@
         "postcss": "^8.1.14",
         "sass": "^1.32.11",
         "vite": "^3.0.0"
-    },
-    "dependencies": {
-        "font-awesome": "^4.7.0"
     }
 }
