--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,7 +21,7 @@ jobs:
       run: |
         docker login -u $DOCKER_USER -p $DOCKER_PASS
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag nellerp21/sneakerstore:latest
+      run: docker build . --file Dockerfile --tag nellerp21/sneakerstore:tagname
       
     - name: Docker Push
       run: docker push nellerp21/sneakerstore
